--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
       "babel": "npm:babel@^4.7.16",
       "babel-runtime": "npm:babel-runtime@^4.7.16"
     }
+  },
+  "dependencies": {
+    "gulp": "^3.8.11"
   }
 }
