--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     }
   },
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "gulp-jade": "^1.0.0",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^0.10.0"
   }
 }
