--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "jspm": {
     "directories": {},
     "dependencies": {
+      "angular": "github:angular/bower-angular@^1.3.15",
       "xiaoyanzhuzzh/Semantic-UI": "github:xiaoyanzhuzzh/Semantic-UI@master"
     },
     "devDependencies": {
