--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "directories": {},
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.3.15",
+      "angular-route": "github:angular/bower-angular-route@^1.3.15",
       "xiaoyanzhuzzh/Semantic-UI": "github:xiaoyanzhuzzh/Semantic-UI@master"
     },
     "devDependencies": {
@@ -11,7 +12,10 @@
     }
   },
   "devDependencies": {
+    "browser-sync": "^2.6.5",
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-connect": "^2.2.0",
     "gulp-jade": "^1.0.0",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^0.10.0"
