--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.3.15",
       "angular-route": "github:angular/bower-angular-route@^1.3.15",
+      "jquery": "github:components/jquery@^2.1.3",
       "xiaoyanzhuzzh/Semantic-UI": "github:xiaoyanzhuzzh/Semantic-UI@master"
     },
     "devDependencies": {
