--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "directories": {},
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.3.15",
+      "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
       "angular-route": "github:angular/bower-angular-route@^1.3.15",
       "jquery": "github:components/jquery@^2.1.3",
       "xiaoyanzhuzzh/Semantic-UI": "github:xiaoyanzhuzzh/Semantic-UI@master"
     },
     "devDependencies": {
       "babel": "npm:babel@^4.7.16",
-      "babel-runtime": "npm:babel-runtime@^4.7.16"
+      "babel-runtime": "npm:babel-runtime@^4.7.16",
+      "core-js": "npm:core-js@^0.9.4"
     }
   },
   "devDependencies": {
