--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
       "angular-route": "github:angular/bower-angular-route@^1.3.15",
       "jquery": "github:components/jquery@^2.1.3",
+      "moment": "npm:moment@^2.10.2",
       "xiaoyanzhuzzh/Semantic-UI": "github:xiaoyanzhuzzh/Semantic-UI@master"
     },
     "devDependencies": {
