--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "jspm": {
     "directories": {},
     "dependencies": {
+      "EpicEditor": "github:OscarGodson/EpicEditor@^0.2.3",
       "angular": "github:angular/bower-angular@^1.3.15",
       "angular-mocks": "github:angular/bower-angular-mocks@^1.3.15",
       "angular-route": "github:angular/bower-angular-route@^1.3.15",
