--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "gulp-jade": "^1.0.0",
     "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^0.10.0"
+  },
+  "dependencies": {
+    "shipit-cli": "^1.2.1",
+    "shipit-deploy": "^1.3.1"
   }
 }
