--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "mocha ./dist/tests/**/*.js"
+  },
   "jspm": {
     "directories": {},
     "dependencies": {
@@ -26,10 +29,15 @@
   },
   "dependencies": {
     "chai": "^2.3.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-istanbul": "^0.9.0",
+    "gulp-mocha": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
     "mocha": "^2.2.4",
-    "sinon": "^1.14.1",
-    "sinon-chai": "^2.7.0",
     "shipit-cli": "^1.2.1",
-    "shipit-deploy": "^1.3.1"
+    "shipit-deploy": "^1.3.1",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
   }
 }
